main.css
* {
	font-family: sans-serif;
	font-size: 9pt;
	color: grey;
	box-sizing: border-box;
}

body {
	padding: 0px;
}

.octodex {
	background: black;
	margin: 0px;
	padding: 0px;

}

.octocat {
	float:left;
	height: 340px;
	width: 340px;
	margin: 10px;
	margin-bottom: 50px;
}

li {
	padding: 0px;
	margin: 0px;
}

ul{
	list-style: none;
	position: relative;
	padding: 0px;
}


a {
	text-decoration: none;
	color: black;
	font-weight: bold;
	height: 0;
	width: 0;
}

img {
	width: 100%;
	padding: 10px;
	border: 1px solid lightgrey;
	margin: 0;

}

.image-footer{
	border-bottom: 2px solid lightgrey;
	overflow: auto;
	padding-top: 8px;
	padding-bottom: 8px;
	position: relative;
}

.image-number{
	float: left;
	color: lightgrey;
	font-weight: bold;
}

.image-caption{
	float: right;
}

.authors{
	float: right;
	padding-left: 5px;
}


.authors img{
	padding: 0px;
	width: 20px;
	height: 20px;
}

.image-number::before   { content: "#" }

.image-footer::after {
	content: "";
	border-left: 7px solid transparent;
  	border-right: 7px solid transparent; 
  	border-top: 7px solid grey;
  	position: absolute;
  	right: 4px;
  	top: 0px;

}

